[project]
name = "uscan_utils"
version = "0.0.1"
authors = [
  { name="Joel", email="Joel@example.com" },
]
description = "A utility package just to keep everything organized"
readme = {file="README.md",content-type="text/markdown"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	"colorlog"
]

[project.urls]
Homepage = "https://github.com/newmanjoel/python-utilities"
Issues = "https://github.com/newmanjoel/python-utilities/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
